--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: go
 install:
   - go get github.com/nowk/assert
+  - go get github.com/gomon/mongod
 	- go get gopkg.in/mgo.v2
 	- go get gopkg.in/mgo.v2/bson
 services:
