--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: go
 install:
-  - go get github.com/nowk/assert
-  - go get github.com/gomon/mongod
-	- go get gopkg.in/mgo.v2
-	- go get gopkg.in/mgo.v2/bson
+  - go get gopkg.in/nowk/assert.v2
+  - go get gopkg.in/mong-go/mongod.v1
+  - go get gopkg.in/mgo.v2
 services:
-	- mongodb
+  - mongodb
 go:
   - "1.0"
   - "1.1"
   - "1.2"
   - "1.3"
+  - "1.4"
   - "tip"
