--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: go
 install:
   - go get gopkg.in/nowk/assert.v2
+  - go get gopkg.in/mong-go/model.v0
   - go get gopkg.in/mong-go/mongod.v1
   - go get gopkg.in/mgo.v2
 services:
